# Rust-Smart-Contracts

./: .gitignore
document_management_platform/: Cargo.toml
document_management_platform/contracts/managing_logic/: Cargo.toml  lib.rs
document_management_platform/contracts/native_token/: Cargo.toml  lib.rs
document_management_platform/contracts/nft_token/: Cargo.toml  lib.rs
document_management_platform/impls/: mod.rs
document_management_platform/impls/managing_logic/: data_structure.rs
document_management_platform/traits/: managing_logic.rs  mod.rs  native_token.rs  nft_token.rs
document_management_system/: Cargo.toml  lib.rs
erc721/: lib.rs
nft_psp34/: lib.rs
nft_psp37/: Cargo.toml  lib.rs
